[gd_scene load_steps=3 format=3 uid="uid://cmk5p8dy3wqrs"]

[ext_resource type="Script" path="res://entities/machines/super_fusion_machine.gd" id="1_super_machine"]
[ext_resource type="Texture2D" path="res://assets/images/fusion_machine_level_two.png" id="2_texture"]

[node name="SuperFusionMachine" type="Node2D"]
script = ExtResource("1_super_machine")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_texture")
scale = Vector2(0.5, 0.5)

[node name="StatusLabel" type="Label" parent="."]
offset_left = -24.0
offset_top = -8.0
offset_right = 24.0
offset_bottom = 8.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "0/2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputAMarker" type="ColorRect" parent="."]
offset_left = -24.0
offset_top = -24.0
offset_right = -19.0
offset_bottom = -19.0
color = Color(1, 0.5, 0, 0.5)

[node name="InputBMarker" type="ColorRect" parent="."]
offset_left = 19.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = -19.0
color = Color(1, 0.5, 0, 0.5)
